yamls/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python
        image: docker.io/samahalisaber/python-task:@BUILD_NUMBER@
        ports:
        - containerPort: 8080
