yamls/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
