yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: default
  annotations:
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
